use toList() directly